Improve LinkedVirtualMemoryTable performance.